🎯 Complete Navigation System:
React Navigation v7 with drawer, stack, and tab navigators
Authentication-based routing (currently showing login screen)
Theme integration with light, dark, and adventure themes
Deep linking support with proper URL schemes
Comprehensive navigation state management
🏗️ Architecture:

NavigationContainer with theme integration
AuthNavigator for auth-based routing
MainNavigator with drawer navigation
TabNavigator for core features
Individual stacks for each feature area
🔧 Context Providers:

ThemeContext for consistent styling
UserContext for authentication state
NavigationContext for navigation state management

--- a/app.json
+++ b/app.json
@@ -11,6 +11,10 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "scheme": "com.liamclarke.herospath",
+    "deepLinking": {
+      "enabled": true,
+      "prefixes": ["com.liamclarke.herospath://", "https://herospath.app"]
+    },
     "owner": "liamclarke-dev",
     "splash": {
       "image": "./assets/splash-icon.png",
