--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
-    "expo": "^53.0.19",
+    "expo": "53.0.20",
     "expo-auth-session": "^6.2.1",
     "expo-constants": "^17.1.7",
     "expo-dev-client": "~5.2.4",
@@ -39,8 +39,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^19.1.8",
+    "@types/react": "~19.0.10",
     "react-native-dotenv": "^3.4.11"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
