--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "test": "jest",
     "export-to-figma": "node scripts/exportTokensToFigma.js"
   },
   "dependencies": {
@@ -39,8 +40,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.2",
     "@types/react": "~19.0.10",
+    "jest": "^30.0.5",
     "react-native-dotenv": "^3.4.11"
+  },
+  "jest": {
+    "preset": "react-native",
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|@react-native|expo|@expo|@react-navigation)/)"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.test.js"
+    ]
   },
   "expo": {
     "doctor": {
